# mc-stresser

./: .gitignore  Cargo.toml  README.md  proxies.txt  rustfmt.toml
src/: args.rs  counter.rs  duration.rs  main.rs  mc_packet_utils.rs  method_icmp_ping.rs  method_join.rs  method_ping.rs  methods.rs  proxies.rs  resolver.rs
src/methods/: icmp.rs  join.rs  methods.rs  mod.rs  ping.rs
