[package]
name = "stimulus"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-socks = "0.5.2"
uuid = "1.17.0"
dashmap = "6.1.0"
hickory-resolver = "0.25.2"
anyhow = "1.0.99"
ez_colorize = "0.1.0"
ping = "0.6.1"
